charts/cockroachdb-operator/client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cockroachdb-client-secure
spec:
  serviceAccountName: cockroach-operator-sa
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
          - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                  - worker-01
                  - worker-02
                  - worker-03
  containers:
    - name: cockroachdb-client-secure
      image: blong14/cockroachdb:v20.2.2
      imagePullPolicy: IfNotPresent
      volumeMounts:
        - name: client-certs
          mountPath: /cockroach/cockroach-certs/
      command:
        - sleep
        - "2147483648" # 2^31
  terminationGracePeriodSeconds: 0
  volumes:
    - name: client-certs
      projected:
        sources:
          - secret:
              name: cockroachdb-node
              items:
                - key: ca.crt
                  path: ca.crt
          - secret:
              name: cockroachdb-root
              items:
                - key: tls.crt
                  path: client.root.crt
                - key: tls.key
                  path: client.root.key
        defaultMode: 256
