charts/cockroachdb-operator/operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cockroach-operator
  namespace: default
  labels:
    app: cockroach-operator
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: cockroach-operator
  template:
    metadata:
      labels:
        app: cockroach-operator
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - pop-os
      serviceAccountName: cockroach-operator-sa
      containers:
        - name: cockroach-operator
          image: blong14/cockroach-operator:latest
          imagePullPolicy: Always
          # new alpha features are disabled via feature gates
          # uncomment the feature-gates argument to enable the feature
          command:
            - "/go/bin/cockroach-operator"
            - "feature-gates"
            - "AutoPrunePVC=true,AffinityRules=true"
            # the below log level accepts "info" "debug" "warn" or "error"
            - "-zap-log-level"
           #- info
            - "debug"
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
